# da

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
classifier/: .gitignore  classifier_meta.json  justfile  model.onnx
classifier/scripts/: apply-pii-fixes.py  augment-prompt.md  export-onnx.py  extract-commands.py  extract-corpus.py  label-prompt.md  label_commands.py  merge-chunks.py  sanitize-commands.py  train.py
src/: classifier.rs  engine.rs  lib.rs  main.rs  policies.rs
src/shparse/: corpus_tests.rs  cursor.rs  lexer.rs  mod.rs  model.rs  parser.rs
tests/: integration.rs
tests/corpus/: NOTICE.md
